[package]
name = "oai_fetcher"
version = "0.1.0"
authors = ["Esty Thomas <esty@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.12", features = ["blocking"] }
regex = "1"
urlencoding = "2"
