[package]
name = "oai_harvester"
version = "0.1.0"
authors = ["Anthony Thomas <antmoth@umich.edu>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.12", features = ["blocking"] }
regex = "1"
urlencoding = "2"
xee-xpath = "^0.1.4"
iri-string = "^0.7.8"
clap = { version = "4.5.35", features = ["derive"] }
anyhow = "1.0.97"
